# nonebot-plugin-qrcode2

./: .gitignore  README.md  pub.bat  pyproject.toml
nonebot_plugin_qrcode2/: __init__.py  config.py  decode.py
