[tool.poetry]
name = "nonebot-plugin-qrcode2"
version = "0.2.3"
description = "本地解析二维码"
authors = ["友利奈绪-勿忘我 <1520872279@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot_plugin_qrcode2" }]
homepage = "https://github.com/tomorinao-www/nonebot-plugin-qrcode2"
repository = "https://github.com/tomorinao-www/nonebot-plugin-qrcode2"
documentation = "https://github.com/tomorinao-www/nonebot-plugin-qrcode2#README.md"

[tool.poetry.dependencies]
python = ">=3.10"
nonebot2 = "^2.2.0"
nonebot-adapter-onebot = ">= 2.2.3"
httpx = ">=0.24.1"
pillow = ">=9.5.0"
pyzbar = ">=0.1.9"
numpy = ">=1.23.5"
opencv-contrib-python = ">=4.8.0.76"
opencv-python = ">=4.7.0.68"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
